# Boost-Web-Server

./: CMakeLists.txt  README.md
assign1/docker/: Dockerfile
assign1/include/: config_parser.h
assign1/src/: config_parser.cc
assign1/tests/: example_config1  example_config2  example_config3
assign2/: CMakeLists.txt
assign2/include/: config_parser.h  reply.h
assign2/src/: config_parser.cc  server.cc  session.cc
assign3/docker/: Dockerfile
assign3/include/: mock_session.h  session.h
assign3/src/: server.cc  session.cc
assign3/tests/: example_config5  server_test.cc  session_test.cc
assign4/: CMakeLists.txt
assign4/config/: deploy_config  test_config
assign4/include/: echo_handler.h  error_handler.h  mime_types.h  mock_session.h  reply.h  request.h  request_parser.h  server.h  session.h  static_handler.h
assign4/src/: echo_handler.cc  mime_types.cc  request_parser.cc  server.cc  server_main.cc  session.cc  static_handler.cc
assign4/tests/: config_parser_test.cc  echo_handler_test.cc  error_handler_test.cc  integration_tests.sh  mime_types_test.cc  reply_test.cc  server_test.cc  session_test.cc
assign5/: CMakeLists.txt
assign5/docker/: cloudbuild.yaml
assign5/include/: mock_session.h  server.h  session.h
assign5/include/http/: mime_types.h  request.h
assign5/include/request_handler/: echo_handler.h  request_handler_interface.h  static_handler.h
assign5/src/: server.cc  session.cc
assign5/tests/: config_parser_test.cc  error_handler_test.cc  reply_test.cc  server_test.cc  static_handler_test.cc
assign6/: CMakeLists.txt
assign6/config/: deploy_config  test_config
assign6/include/: server.h
assign6/include/http/: header.h  path.h
assign6/include/request_handler/: request_handler_interface.h
assign6/include/request_handler_factory/: _404_handler_factory.h  echo_handler_factory.h  request_handler_factory.h
assign6/src/: config_parser.cc
assign6/src/request_handler/: static_handler.cc
assign6/src/request_handler_factory/: static_handler_factory.cc
assign6/tests/: error_handler_test.cc  static_handler_factory_test.cc  static_handler_test.cc
assign6/tests/static_files/static1/: example.html
assign7/: CMakeLists.txt
assign7/include/: server.h  session.h  util.h
assign7/src/: server.cc  session.cc
assign7/tests/: api_handler_test.cc  echo_handler_factory_test.cc  session_test.cc  util_test.cc
assign8/: CMakeLists.txt
assign8/config/: test_config
assign8/docker/: cloudbuild.yaml
assign8/include/: mock_session.h  server.h
assign8/src/: config_parser.cc
assign8/tests/: api_handler_test.cc  config_parser_test.cc  error_handler_test.cc  server_test.cc  sleep_handler_test.cc
assign9/: CMakeLists.txt
assign9/config/: test_config
assign9/docker/: coverage.Dockerfile
assign9/include/: config_parser.h  entity_manager.h  profile_manager.h  session.h  user_profile.h  util.h
assign9/include/http/: path.h
assign9/include/request_handler/: authentication_handler.h
assign9/include/request_handler_factory/: api_console_handler_factory.h  api_handler_factory.h  authentication_handler_factory.h  health_handler_factory.h
assign9/src/: config_parser.cc  entity_manager.cc  profile_manager.cc
assign9/src/request_handler/: sleep_handler.cc
assign9/src/request_handler_factory/: api_handler_factory.cc  authentication_handler_factory.cc  health_handler_factory.cc  profile_handler_factory.cc  sleep_handler_factory.cc
assign9/tests/: _404_handler_factory_test.cc  api_console_handler_factory_test.cc  api_handler_factory_test.cc  authentication_handler_factory_test.cc  config_parser_test.cc  echo_handler_test.cc  profile_handler_factory_test.cc  profile_handler_test.cc  profile_manager_test.cc  session_test.cc  static_handler_factory_test.cc  util_test.cc
assign9/tests/credentials/: console.html  login.html
assign9/tests/integration_tests/: integration_test_7_expected
assign9/tests/test_config/: example_config7
config/: deploy_config  test_config
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml
include/: config_parser.h  entity.h  entity_manager.h  header.h  reply.h  request_handler_interface.h  request_parser.h  server.h  session.h  session_interface.h
include/http/: path.h  reply.h
include/request_handler/: _404_handler.h  api_console_handler.h  api_handler.h  echo_handler.h  error_handler.h  profile_handler.h  request_handler_interface.h  sleep_handler.h  static_handler.h
include/request_handler_factory/: _404_handler_factory.h  api_handler_factory.h  echo_handler_factory.h  profile_handler_factory.h  request_handler_factory.h  sleep_handler_factory.h  static_handler_factory.h
src/: config_parser.cc  config_parser_main.cc  entity_manager.cc  error_handler.cc  reply.cc  request_parser.cc  server.cc  server_main.cc  session.cc  util.cc
src/http/: mime_types.cc
src/request_handler/: api_console_handler.cc  api_handler.cc  authentication_handler.cc  echo_handler.cc  error_handler.cc  health_handler.cc  profile_handler.cc  static_handler.cc
src/request_handler_factory/: _404_handler_factory.cc  api_console_handler_factory.cc  api_handler_factory.cc  echo_handler_factory.cc  health_handler_factory.cc  static_handler_factory.cc
tests/: _404_handler_factory_test.cc  _404_handler_test.cc  api_console_handler_test.cc  api_handler_factory_test.cc  api_handler_test.cc  authentication_handler_test.cc  config_parser_test.cc  echo_handler_factory_test.cc  echo_handler_test.cc  example_config4  example_config5  example_config9  health_handler_factory_test.cc  health_handler_test.cc  integration_test_1_expected  integration_tests.sh  mime_types_test.cc  reply_test.cc  request_parser_test.cc  server_test.cc  session_test.cc  sleep_handler_factory_test.cc  static_handler_test.cc
tests/credentials/: signup.html
tests/integration_tests/: integration_test_1_expected  integration_test_3_expected  integration_test_4_expected  integration_test_6_expected  integration_test_8_expected  integration_tests.sh
tests/test_config/: example_config10  example_config11  example_config12  example_config8
(+23 files in other folders)
